		CHANGES IN R VERSION 0.63.2

NEW FEATURES

    o   sink() has new `append' argument.

    o   new function rle().

BUG FIXES

    o   `make install' copied the R shell script a second time without
	getting RHOME right (thus also breaking R CMD check).  Fixed.

    o   help() after help.start() did not work if topic was not equal
        to filename (e.g. rnorm is found in Normal.html)


		CHANGES IN R VERSION 0.63.1

NEW FEATURES

    o   new function mosaicplot().

    o	xy.coords(.) has a  "recycle = FALSE" argument,	 used in text().

    o	RNGtype() allows to choose different Random Number Generators.
		__EXPERIMENTAL__

    o	print.default(.) now also works with a `right = TRUE' argument.
	{{ print.matrix(.) is bound to become deprecated... }}

    o	new help page `Memory' on the usage of command line options
	--vsize and --nsize. Error message if R runs out of memory
	points to help(Memory).

    o	rowsum() and improved na.omit() added from survival4
    
    o	backsolve(.) has new arguments "upper.tri = TRUE, transpose = FALSE"

    o	hist() has new "right = TRUE" argument;	 
	"right = FALSE" gives  [a,b) intervals

    o	help() has "htmlhelp" argument, allowing to suppress htmlhelp after
	help.start().  This is desired for ESS.

    o   quantile(.) has an "names = TRUE" argument for speed.
	It is much better documented now.


BUG FIXES

    o	build-help --dosnames should now also work for text help,
	latex and examples.

    o	seq() should work better now (fuzz-factor 1e-7 inserted)

    o	multiple arguments to return caused value to be a pairlist

    o	data.frame choked on long names from deparse()

    o	data.edit now works (dataedit doesn't need pairlist()s anymore)

    o	as.pairlist(NULL) is ok

    o	ts(1:5, start=2, end=4) now work.  Further plot(ts(..), ts(..))

    o	eigen() returns $vectors in any case [S compat].

    o	apply(cbind(1,1:9, 2, quantile) doesn't drop quantile names anymore
